--- a/ccc/index.html
+++ b/ccc/index.html
@@ -18,7 +18,7 @@
 reading, video, music, informational audio. An ideal answer here would be
 a list of categories, an intent behind why I care about each category, and
 a way for me to find high quality content to best fulfill the intent. </p><p>For example, one category might be comics, read with the intent to let me relax
-and laugh, so high quality content might come from the Far Side or Calvin &amp; Hobbes.high quality content might come from the Far Side or Calvin &amp; Hobbes.</p><h4>Reading</h4><p>I read to be entertained for short periods of time (short stories and r/AITA; &lt;20 minutes),
+and laugh, so high quality content might come from the Far Side or Calvin &amp; Hobbes.</p><h4>Reading</h4><p>I read to be entertained for short periods of time (short stories and r/AITA; &lt;20 minutes),
 to learn about the world (longform reports, articles, and books), and to stay up to date
 about my hobbies (news posts about ski resorts or artists).</p><h4>Video</h4><p>I enjoy watching Youtube for hobbies (biking, snowboarding), entertainment (short films, dance, MVs), and
 education (Kursesagt, Ray Dalio). Netflix is also helpful for entertainment and education.</p><h3>How can we improve the quality of our inputs?</h3><h4>Reading</h4><p>The web is a wide, wide place. Visiting only a handful of websites feels unrepresentative of
