Add some basic info to the index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+Hey, thanks for visiting my site. Perhaps someday I'll put something more significant here. In the meantime, feel free to check out my <a href="https://oeuvres.substack.com/">substack</a>.
 </body>
 
 </html>
